Index page fixed registration and login align

--- a/static/styles/registrationLoginStyle.css
+++ b/static/styles/registrationLoginStyle.css
@@ -25,3 +25,9 @@
     height: 40px;
     margin-top: 50px;
 }
+
+.menuLogs {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
